# ocrd_keraslm

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.circleci/: config.yml
ocrd_keraslm/: __init__.py  ocrd-tool.json
ocrd_keraslm/lib/: __init__.py  callbacks.py  rating.py
ocrd_keraslm/scripts/: __init__.py  run.py
ocrd_keraslm/wrapper/: __init__.py  cli.py  ocrd-tool.json  rate.py
test/: conftest.py  prepare_gt.bash  test_wrapper.py
