[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "ocrd_keraslm"
authors = [
    {name = "Robert Sachunsky", email = "sachunsky@informatik.uni-leipzig.de"},
    {name = "Konstantin Baierer", email = "unixprog@gmail.com"},
    {name = "Kay-Michael Würzner", email = "wuerzner@gmail.com"},
]
description = "character-level language modelling in Keras for OCR-D"
readme = "README.md"
license.text = "Apache-2.0"
requires-python = ">=3.8"

dynamic = ["version", "dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
keraslm-rate = "ocrd_keraslm.scripts.run:cli"
ocrd-keraslm-rate = "ocrd_keraslm.wrapper.cli:ocrd_keraslm_rate"

[project.urls]
Homepage = "https://github.com/OCR-D/ocrd_keraslm"
Repository = "https://github.com/OCR-D/ocrd_keraslm.git"

[project.optional-dependencies]
plotting = ["sklearn", "matplotlib", "adjusttext"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements_test.txt"]}

[tool.setuptools]
packages = ["ocrd_keraslm", "ocrd_keraslm.lib", "ocrd_keraslm.scripts", "ocrd_keraslm.wrapper"]
package-data = {"*" = ["ocrd-tool.json"]}

[tool.coverage.run]
branch = true
source = ["ocrd_keraslm"]
